sinalcabo/force-app/main/default/objects/SC_FS_SLA_OT__mdt/SC_FS_SLA_OT__mdt.object-meta.xml
<CustomObject>
    <description>Encaminhamento de SLA por código de OT: que direito de serviço e que horário a ordem recebe quando entra com aquele tipo de trabalho. Uma linha por código do catálogo da NOS. As linhas levam identificadores de registos e por isso não vivem no force-app: são dados de cada org.</description>
    <label>SLA por OT</label>
    <pluralLabel>SLA por OT</pluralLabel>
</CustomObject>