sinalcabo/force-app/main/default/objects/SC_FS_SLA_OT__mdt/fields/Business_Hours_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_Id__c</fullName>
    <description>Identificador do horário em que os prazos deste código contam: o horário de dias úteis ou o horário contínuo.</description>
    <inlineHelpText>Identificador de 18 caracteres. Tem de ser o mesmo horário que está no processo do Entitlement.</inlineHelpText>
    <label>Id do horário</label>
    <length>18</length>
    <type>Text</type>
</CustomField>