sinalcabo/force-app/main/default/objects/SC_FS_SLA_OT__mdt/fields/Codigo_OT__c.field-meta.xml
<CustomField>
    <fullName>Codigo_OT__c</fullName>
    <description>Código do tipo de pedido no catálogo da NOS a que esta linha diz respeito.</description>
    <inlineHelpText>Tem de ser igual ao código da OT no tipo de trabalho.</inlineHelpText>
    <label>Código da OT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>