sinalcabo/force-app/main/default/objects/SC_FS_SLA_OT__mdt/fields/Entitlement_Id__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Id__c</fullName>
    <description>Identificador do Entitlement que leva o par de prazos deste código. É o que o flow escreve na ordem.</description>
    <inlineHelpText>Identificador de 18 caracteres, do Entitlement no contrato de serviço do operador.</inlineHelpText>
    <label>Id do direito de serviço</label>
    <length>18</length>
    <type>Text</type>
</CustomField>