sinalcabo/force-app/main/default/objects/SC_FS_SLA_OT__mdt/fields/Tem_TE__c.field-meta.xml
<CustomField>
    <fullName>Tem_TE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ligado quando o catálogo dá prazo de execução a este código. Desligado nos códigos conforme acordado e nos de policiamento.</description>
    <label>Tem prazo de execução</label>
    <type>Checkbox</type>
</CustomField>