sinalcabo/force-app/main/default/objects/SC_FS_SLA_OT__mdt/fields/Tem_TEC__c.field-meta.xml
<CustomField>
    <fullName>Tem_TEC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ligado quando o catálogo dá prazo de entrega do cadastro a este código.</description>
    <label>Tem prazo de cadastro</label>
    <type>Checkbox</type>
</CustomField>