sinalcabo/force-app/main/default/objects/SC_FS_SLA_OT__mdt/fields/Work_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Id__c</fullName>
    <description>Identificador do tipo de trabalho na org. É por aqui que o flow encontra a linha a partir da ordem, sem consultar o tipo de trabalho.</description>
    <inlineHelpText>Identificador de 18 caracteres. Muda de org para org, por isso estas linhas não vivem no force-app.</inlineHelpText>
    <label>Id do tipo de trabalho</label>
    <length>18</length>
    <type>Text</type>
</CustomField>